# evez666-advancement

./: .mem0_records.json  .save_mem0.sh  .tmp_mem0_batch.json  .write_mem0_batch.py  AGENTS.md  COMPOSIO_CONNECTIONS.md  COMPOSIO_TOOLS.md  DEPLOYMENT.md  DREAMS.md  HEARTBEAT.md  MEMORY.md  SOUL.md  TOOLS.md  USER.md  adjust_intervals.py  advance_surfaces.py  auto-route-failover-report.md  autonomous_core.sh  autoroute_failover.py  build_report.py  c-tank-wave-intent.json  cellnetwork_correlator.py  cellnetwork_ontological_mapper.py  cellnetwork_stream.py  check_mem0_status.py  check_mem0_tool.py  cron.json  cron_autoroute_report.txt  cron_result.txt  cron_result_autoroute.txt  cron_results.txt  cron_results_400b1cd6-a088-45cc-b977-377631106623.md  cron_stagger_plan.json  debug_circuits.sh  decentralized_mesh.py  distributed_economic_graph.py  economic_graph_runtime.py  environment_map.py  evez-ecosystem-hub.py  evez-integrator.py  (+92 more)
evez-docs/evez-os-fix-falsifier-gate/os-evez/: README.md  SECURITY.md  cli.py  expansion.py  orchestrator.py  pyproject.toml  self_repair.py
evez-docs/evez-os-fix-falsifier-gate/os-evez/autoclaw/: runner.py
evez-docs/evez-os-fix-falsifier-gate/os-evez/evezos/: replay.py  spine.py  verify.py  viz.py
evez-docs/evez-os-fix-falsifier-gate/os-evez/openclaw/: __init__.py  cli.py  client.py  policy.py
evez-docs/evez-os-fix-falsifier-gate/os-evez/openplanter/: __init__.py  dag.py
evez-docs/evez-os-fix-falsifier-gate/os-evez/scripts/: termux_demo.sh  termux_start_all.sh
evez-docs/evez-os-fix-falsifier-gate/os-evez/tests/: test_core.py
(+1841 files in other folders)
