[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "os-evez"
version = "1.0.0"
description = "OS-EVEZ: OpenClaw + AutoClaw + EVEZOS + OpenGarden unified Termux stack"
readme = "README.md"
license = {text = "AGPL-3.0"}
authors = [{name = "Steven Crawford-Maggard", email = "rubikspubes69@gmail.com"}]
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.27.0",
    "pyyaml>=6.0",
    "cryptography>=42.0",
    "rq>=1.16",
    "redis>=5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.27.0"]

[project.scripts]
openclaw = "openclaw.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
